Fix layout with scrolling and overflow shadow of right side

--- a/x-pack/plugins/maps/public/components/widget_overlay/_widget_overlay.scss
+++ b/x-pack/plugins/maps/public/components/widget_overlay/_widget_overlay.scss
@@ -12,17 +12,9 @@
   bottom: $euiSizeM;
   pointer-events: none; /* 1 */
 }
-
-.mapWidgetOverlay__rightSideWrapper {
-  overflow: hidden; // Fixes Chrome overflow
-}
-
-.mapWidgetOverlay__rightSide {
-  width: $euiSize * 20;
-}
-
 .mapWidgetOverlay__layerWrapper {
   align-items: flex-end;
+  width: $euiSize * 20;
 }
 
 .mapWidgetControl {
