--- a/x-pack/plugins/maps/public/components/widget_overlay/attribution_control/_attribution_control.scss
+++ b/x-pack/plugins/maps/public/components/widget_overlay/attribution_control/_attribution_control.scss
@@ -1,4 +1,5 @@
 .mapAttributionControl {
   @include mapOverlayIsTextOnly;
   pointer-events: all;
+  padding-left: $euiSizeM;
 }
