--- a/x-pack/plugins/maps/public/components/widget_overlay/layer_control/_layer_control.scss
+++ b/x-pack/plugins/maps/public/components/widget_overlay/layer_control/_layer_control.scss
@@ -6,6 +6,10 @@
   border-top: 1px solid $euiColorLightestShade;
 }
 
+.mapLayerControl__addLayerButton {
+  flex-shrink: 0;
+}
+
 .mapLayerControl__addLayerButton,
 .mapLayerControl__openLayerTOCButton,
 .mapViewControl__gotoButton {
